{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 99,
  "lineage": "1a7eebbd-7875-9339-9760-9a54ea9b94ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "us-east-1-default-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:subnet/subnet-058900e1561fcf46c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-058900e1561fcf46c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380955945980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aa52f90d7c78b8bb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "student_on_demand_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04537cfe22bace769",
            "arn": "arn:aws:ec2:us-east-1:380955945980:instance/i-0dcb5087891c37d47",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcb5087891c37d47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "15619-CC",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbe1833439e0b440",
            "private_dns": "ip-172-31-80-43.ec2.internal",
            "private_ip": "172.31.80.43",
            "public_dns": "ec2-18-208-160-118.compute-1.amazonaws.com",
            "public_ip": "18.208.160.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aaaa7b00540c2ea5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "emr_master",
              "emr_slave",
              "terraform-20220412215907740700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043ea49b461cf4335",
            "tags": {
              "Name": "Cloud Computing Workspace Machine",
              "project": "stream-processing"
            },
            "tags_all": {
              "Name": "Cloud Computing Workspace Machine",
              "project": "stream-processing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c0bfa50b35b638e",
              "sg-017a889ec795de0ae",
              "sg-0e037eecfee3c2132"
            ]
          },
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave",
            "aws_security_group.student_ami_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:security-group/sg-017a889ec795de0ae",
            "description": "emr_master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017a889ec795de0ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "emr_master",
            "name_prefix": "",
            "owner_id": "380955945980",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa52f90d7c78b8bb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:security-group/sg-00c0bfa50b35b638e",
            "description": "emr_slave",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c0bfa50b35b638e",
            "ingress": [],
            "name": "emr_slave",
            "name_prefix": "",
            "owner_id": "380955945980",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa52f90d7c78b8bb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "student_ami_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:security-group/sg-0e037eecfee3c2132",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e037eecfee3c2132",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220412215907740700000001",
            "name_prefix": "terraform-",
            "owner_id": "380955945980",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cloud Computing Workspace",
              "project": "stream-processing"
            },
            "tags_all": {
              "Name": "Cloud Computing Workspace",
              "project": "stream-processing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa52f90d7c78b8bb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_traffic_from_master_to_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2897934329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00c0bfa50b35b638e",
            "self": false,
            "source_security_group_id": "sg-017a889ec795de0ae",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_traffic_from_slave_to_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3637620629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-017a889ec795de0ae",
            "self": false,
            "source_security_group_id": "sg-00c0bfa50b35b638e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave"
          ]
        }
      ]
    }
  ]
}